# weatherForecastApp

./: .flake8  .gitignore  Dockerfile  README.md  env_vars.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
api/: cities.json  service.py  tests.py  urls.py  views.py
templates/: index.html
weatherForcast/: asgi.py  settings.py  urls.py  wsgi.py
